postgres-deployment-gcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: persistent-layer-deployment
spec:
        replicas: 1
        selector:
                matchLabels:
                        app: project
        template:
                metadata:
                        labels:
                                app: project
                spec:
                        containers:
                                - name: postgres-container
                                  image: raduge/postgres-person-db
                                  imagePullPolicy: "IfNotPresent"
                                  ports:
                                          - containerPort: 5432
                                  volumeMounts:
                                          - name: projectdb
                                            mountPath: /var/lib/postgresql/data
                                            subPath: postgres
                        volumes:
                                - name: projectdb
                                  persistentVolumeClaim:
                                          claimName: persistent-layer-pvc
