postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: persistent-layer-service
        labels:
                app: project
spec:
        type: NodePort
        ports:
                - port: 5432
                  nodePort: 30001
        selector:
                app: project
