rest-api-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: rest-api-service 
  labels:
    app: rest-api
spec: 
  type: ClusterIP 
  ports: 
   - protocol: TCP  
     port: 8081 
     targetPort: 5000 
  selector: 
    app: rest-api
