webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
        name: web-app-service
spec:
        type: NodePort
        ports:
        - protocol: TCP
          nodePort: 30002
          port: 8091
          targetPort: 80
        selector:
                app: project-web-app
