webapp-ingress-gcp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  #tls:
  #- hosts:
  #    - group31app.com
  #  secretName: my-tls-secret
  rules:
  - host: 34.96.121.196
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: web-app-service
            port:
              number: 80
